--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -1,3 +1,6 @@
 index:
     path: /
     controller: App\Controller\DefaultController::index
+update_task:
+    path: '/update-task/{id}/{status}'
+    controller: App\Controller\TaskController::updateTaskStatus
